changed home text from bold to test pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 
 
   <%= link_to root_path do %>
-		<strong>Home</strong>
+		Home
 	<% end %>
 
 	<fieldset style="position: absolute; right: 0; border: 5px solid; padding: 3px; background-color: white">
